<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <!--android:angle="90"
            android:startColor="#f0000000"
            android:type="linear" >-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:weightSum="1"
        android:background="@android:color/black">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textUsername"
            android:id="@+id/textUsername"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:foreground="#000000FF"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editLogin"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"

            android:textColor="@color/white"
            android:hint="example@whaves.com"
            android:textColorHint="@drawable/selector"
            android:background="@drawable/backwithborder" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textPassword"
            android:id="@+id/textPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/red"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"

            android:hint="••••••••••"
            android:textColor="@color/white"
            android:textColorHint="@drawable/selector"
            android:background="@drawable/backwithborder"
            />
        <!--  -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textErrorMsg"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white" />

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/textEnter"
            android:id="@+id/buttonLogin"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:textColor="@color/black"
            />

        />
            <!--android:background="#00ffffff"/>-->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:weightSum="1"
            android:layout_weight="1"
            android:foreground="#000000">

        </LinearLayout>
    </LinearLayout>

</LinearLayout>


